objects/Investigation__c.object
<CustomObject>
    <description>Custom Object to house details of investigations of complaints</description>
    <fields>
        <fullName>Additional_Information_if_needed__c</fullName>
        <description>An area to add any information or explanations that were not covered by the fields on the record.</description>
        <label>Additional Information (if needed):</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Amount_Manufactured_Lbs__c</fullName>
        <description>The number of pounds that was manufactured</description>
        <label>Amount Manufactured (Lbs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Batching_Info_Explanation__c</fullName>
        <description>An area for the user to enter more information about their selections</description>
        <label>Batching Info Explanation:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Manufactured__c</fullName>
        <description>The date the product was manufactured</description>
        <label>Date Manufactured</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Form_of_Feed_Produced__c</fullName>
        <description>The forms of feed produced in the batch</description>
        <label>Form of Feed Produced</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blocks</fullName>
                </value>
                <value>
                    <fullName>Crumbles</fullName>
                </value>
                <value>
                    <fullName>Cubes</fullName>
                </value>
                <value>
                    <fullName>Extruded</fullName>
                </value>
                <value>
                    <fullName>Gel</fullName>
                </value>
                <value>
                    <fullName>Mineral - Granular</fullName>
                </value>
                <value>
                    <fullName>Liquid</fullName>
                </value>
                <value>
                    <fullName>Meal</fullName>
                </value>
                <value>
                    <fullName>Mineral - Non-Granular</fullName>
                </value>
                <value>
                    <fullName>Pellets</fullName>
                </value>
                <value>
                    <fullName>Textured</fullName>
                </value>
                <value>
                    <fullName>Tubs</fullName>
                </value>
                <value>
                    <fullName>Milk Replacer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Formula_No__c</fullName>
        <description>The formula number of the batch</description>
        <label>Formula No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_A_Product_Sample_Been_Received_From__c</fullName>
        <description>Has A Product Sample Been Received From the Customer?</description>
        <inlineHelpText>Has A Product Sample Been Received From the Customer?</inlineHelpText>
        <label>Product Sample Received From Customer?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Any_Product_Been_Returned__c</fullName>
        <description>Asks if a product has been returned</description>
        <label>Has Any Product Been Returned?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Historical_Investigation_ID__c</fullName>
        <description>External ID for historical Service Requests migrated from Oracle CRM</description>
        <externalId>true</externalId>
        <label>Historical Investigation ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Yes_Amount_Returned_in_Lbs__c</fullName>
        <description>Number of pounds that have been returned, if any</description>
        <label>If Yes, Amount Returned (in Lbs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>If_Yes_Date_Returned__c</fullName>
        <description>Date the product was returned, if relevant</description>
        <label>If Yes, Date Returned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>If_Yes_Date_Submitted__c</fullName>
        <description>Date the sample was submitted to the lab</description>
        <label>If Yes, Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>If_Yes_Did_Sample_Appear_Smell_Normal__c</fullName>
        <description>If Yes, Did Sample Appear &amp; Smell Normal / Meet Product Specs?</description>
        <inlineHelpText>If Yes, Did Sample Appear &amp; Smell Normal / Meet Product Specs?</inlineHelpText>
        <label>If Yes, Did Sample Appear &amp; Smell Normal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No*</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_Yes_Have_Any_Other_Complaints_Been_R__c</fullName>
        <description>If Yes, Have Any Other Complaints Been Received?</description>
        <inlineHelpText>If Yes, Have Any Other Complaints Been Received?</inlineHelpText>
        <label>If Yes, Any Other Complaints Received?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes*</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_Yes_Name_of_Lab__c</fullName>
        <description>Name of lab sample has been sent to</description>
        <label>If Yes, Name of Lab:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invest_Indicate_Poss_Feed_Qual_Prob__c</fullName>
        <description>Did Your Investigation Indicate a Possible Feed Quality Problem?</description>
        <inlineHelpText>Did Your Investigation Indicate a Possible Feed Quality Problem?</inlineHelpText>
        <label>Invest. Indicate Poss Feed Qual Prob?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes*</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Investigation_Summary_Explanation__c</fullName>
        <description>The Explanation for any Investigation Summary fields answered with a value that contained an asterisk.</description>
        <label>Investigation Summary Explanation:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Yield_Variance_In_Tolerance__c</fullName>
        <description>Asks if the Yield Variance is in tolerance</description>
        <label>Is Yield Variance In Tolerance?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No*</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>On_All_Bulk_Trucks__c</fullName>
        <description>Were proper Sequencing/Flushing/Cleaning procedures followed on all bulk trucks?</description>
        <label>On All Bulk Trucks?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No*</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Customers_Received_Prod_From_Run__c</fullName>
        <description>Have Other Customers Received Product From This Run?</description>
        <inlineHelpText>Have Other Customers Received Product From This Run?</inlineHelpText>
        <label>Other Customers Received Prod From Run?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Production_Sequencing_Explanation__c</fullName>
        <description>The Explanation for any Production Sequencing fields answered with a value that contained an asterisk.</description>
        <label>Production Sequencing Explanation:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Retained_Sample_Appear_Smell__c</fullName>
        <description>Did The Retained Sample Appear and Smell Normal / Meet Product Specs?</description>
        <inlineHelpText>Did The Retained Sample Appear and Smell Normal / Meet Product Specs?</inlineHelpText>
        <label>Retained Sample Appear/Smell Normal?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No*</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revision_Date__c</fullName>
        <description>The date of the revision</description>
        <label>Revision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Run_ID_Number__c</fullName>
        <description>The Run ID number of the batch</description>
        <label>Run ID Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Info_Explanation__c</fullName>
        <description>The Explanation for any Sample Info fields answered with a value that contained an asterisk.</description>
        <label>Sample Info Explanation:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sample_Submitted_For_Lab_Testing__c</fullName>
        <description>Has A Sample Been Submitted For Lab Testing?</description>
        <inlineHelpText>Has A Sample Been Submitted For Lab Testing?</inlineHelpText>
        <label>Sample Submitted For Lab Testing?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Selections_with_Req_More_Info__c</fullName>
        <defaultValue>&quot;Provide explanation below.&quot;</defaultValue>
        <description>Selections with * require further Production Sequencing Info explanation.</description>
        <inlineHelpText>Selections with * require further Production Sequencing Info explanation.</inlineHelpText>
        <label>Selections with * Req More Prod Seq Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selections_with_Req_More_Invest_Info__c</fullName>
        <defaultValue>&quot;Provide explanation below.&quot;</defaultValue>
        <description>Selections with * require further Investigation Summary explanation.</description>
        <inlineHelpText>Selections with * require further Investigation Summary explanation.</inlineHelpText>
        <label>Selections with * Req More Invest. Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selections_with_require_further_Sample__c</fullName>
        <defaultValue>&quot;Provide explanation below.&quot;</defaultValue>
        <description>Selections with * require further Sample Info explanation.</description>
        <inlineHelpText>Selections with * require further Sample Info explanation.</inlineHelpText>
        <label>Selections with * Req More Sample Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selections_with_require_further_info__c</fullName>
        <defaultValue>&quot;Provide explanation below.&quot;</defaultValue>
        <description>Selections with * Require further Batching Info explanation.</description>
        <inlineHelpText>Selections with * Require further Batching Info explanation.</inlineHelpText>
        <label>Selections with * Req More Batching Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Service Request that the Investigation stems from</description>
        <label>Service Request</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Investigations</relationshipLabel>
        <relationshipName>Investigations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <description>Who the sample was submitted by</description>
        <label>Submitted By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Through_All_Other_Manufacturing_Equi__c</fullName>
        <description>Were proper Sequencing/Flushing/Cleaning procedures followed through all other Manufacturing Equipment?</description>
        <inlineHelpText>... Through All Other Manufacturing Equipment?</inlineHelpText>
        <label>Through All Other Manufacturing Eq?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No*</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Through_Extruder_s__c</fullName>
        <description>Were proper Sequencing/Flushing/Cleaning procedures followed through Extruder(s)?</description>
        <label>Through Extruder(s)?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No*</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Through_Packing_Bulk_Load_Out__c</fullName>
        <description>Were proper Sequencing/Flushing/Cleaning procedures followed through Packing / Bulk Load-Out?</description>
        <label>Through Packing / Bulk Load-Out?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No*</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Through_Pellet_Mill_s__c</fullName>
        <description>Were proper Sequencing/Flushing/Cleaning procedures followed through Pellet Mill(s)?</description>
        <label>Through Pellet Mill(s)?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No*</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Through_all_Bins_Tanks__c</fullName>
        <description>Were proper Sequencing/Flushing/Cleaning procedures followed through all Bins/Tanks?</description>
        <label>Through all Bins/Tanks?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No*</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Through_the_Feeder_Line__c</fullName>
        <description>Were proper Sequencing/Flushing/Cleaning procedures followed through the Feeder Line?</description>
        <label>Through the Feeder Line?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No*</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Through_the_Mixer_s__c</fullName>
        <description>Were proper Sequencing/Flushing/Cleaning procedures followed through the Mixer(s)?</description>
        <label>Through the Mixer(s)?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No*</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_Yield_Variance_In_Tolerance_on_all_B__c</fullName>
        <description>Was Yield Variance In Tolerance on all Before and After products?</description>
        <inlineHelpText>Was Yield Variance In Tolerance on all Before and After products?</inlineHelpText>
        <label>YV In Tol on all Before &amp; After prods?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No*</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Were_Micro_Ingredients_Added_Per_Formula__c</fullName>
        <description>Checks if Micro-Ingredients were added per the formula</description>
        <label>Were Micro-Ingredients Added Per Formula</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No*</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Were_formula_substitutions_made__c</fullName>
        <description>Asks if formula substitutions were made</description>
        <label>Were formula substitutions made?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes*</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Were_proper_Seq_Flushing_Cleaning__c</fullName>
        <description>Were proper Sequencing/Flushing/Cleaning procedures followed...</description>
        <formula>&quot;Provide Responses Below&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Were proper Sequencing/Flushing/Cleaning procedures followed...</inlineHelpText>
        <label>Were proper Seq/Flush/Clean pro followed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Were_reprocess_or_rework_materials_used__c</fullName>
        <description>Asks if reprocess or rework materials were used</description>
        <label>Were reprocess or rework materials used?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes*</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Yield_Variance_Over__c</fullName>
        <description>The percentage of variance of yield (over)</description>
        <label>Yield Variance Over (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Yield_Variance_Under__c</fullName>
        <description>The percentage of variance of yield (under)</description>
        <label>Yield Variance Under (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Investigation</label>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Investigation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investigations</pluralLabel>
    <recordTypes>
        <fullName>Customer_Ops_Investigation</fullName>
        <active>true</active>
        <description>A customer operations investigation</description>
        <label>Customer Ops Investigation</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>